2010-12-07  Murray Cumming  <murrayc@murrayc.com>

	Added properties using Gdk::RGBA.

	* gdk/src/color.hg:
	* gtk/src/cellrenderer.hg:
	* gtk/src/cellrenderertext.hg:
	* gtk/src/cellview.hg:
	* gtk/src/colorbutton.hg:
	* gtk/src/texttag.hg: Added the new properties that take a Gdk::RGBA instead 
	of Gdk::Color. We can remove Gdk::Color when it has been deprecated in 
	GTK+ 3:
	https://bugzilla.gnome.org/show_bug.cgi?id=636695

2010-12-07  Murray Cumming  <murrayc@murrayc.com>>

	Fix Gdk::RGBA and fix the demos build (make check)

	* gdk/src/rgba.[hg|ccg]: Change set_rgb() to set_rgba(), adding an optional 
	alpha parameter.
  Change set_rgb_p() to set_rgba_p(), adding an optional 
	alpha parameter.
	Fix their implementation because GdkRGBA has double members instead of gushort 
	members as in GdkColor.
	* gtk/src/colorselection.[hg|ccg]: Added get/set_current_rgba() and 
	get/set_previous_rgba().
	* demos/gtk-demo/example_colorsel.cc:
	* demos/gtk-demo/example_drawingarea.cc:
	* demos/gtk-demo/example_textview.cc:
	* demos/gtk-demo/textwidget.cc: Use Gdk::RGBA rather than Gdk::Color, using 
	the Widget::override_*() methods instead of the old Widget::modify_*() methods.

2010-12-07  Murray Cumming  <murrayc@murrayc.com>

	Regenerate gtk_signals.defs.

	* gtk/src/gtk_signals.defs: Regenerated with extra_defs_gen.
	* gtk/src/gtk_signals.defs.patch: Updated this patch so it is easier to 
	make the manual changes next time.
	* gtk/src/widget.hg: Removed the style_changed signal because the underlying 
	style-set signal uses GtkStyle, which is deprecated.

2010-12-07  Murray Cumming  <murrayc@murrayc.com>

	Remove includes of style.h and rc.h.

	* gtk/src/iconinfo.hg:
	* gtk/src/iconset.ccg:
	* gtk/src/widget.ccg:
	* gtk/src/widget.hg: Removed includes of headers that do not exist now.

2010-12-06  Murray Cumming  <murrayc@murrayc.com>

	Restored the GtkPrintCapabilities enum.

	* gtk/src/gtk_enums.defs: Added the result from unix-print/gtk/, lost when 
	regenerating.