@@ -40562,27 +40562,30 @@
   (construct-only #f)
 )
 
-;; From GtkStyle
+;; From GtkStyleContext
 
-(define-signal realize
-  (of-object "GtkStyle")
+(define-signal changed
+  (of-object "GtkStyleContext")
   (return-type "void")
   (when "first")
 )
 
-(define-signal unrealize
-  (of-object "GtkStyle")
-  (return-type "void")
-  (when "first")
-)
-
-(define-property context
-  (of-object "GtkStyle")
+(define-property screen
+  (of-object "GtkStyleContext")
   (prop-type "GParamObject")
-  (docs "GtkStyleContext to get style from")
+  (docs "The associated GdkScreen")
   (readable #t)
   (writable #t)
-  (construct-only #t)
+  (construct-only #f)
+)
+
+(define-property direction
+  (of-object "GtkStyleContext")
+  (prop-type "GParamEnum")
+  (docs "Text direction")
+  (readable #t)
+  (writable #t)
+  (construct-only #f)
 )
 
 ;; From GtkSwitch
