@@ -44,6 +44,7 @@ int main(int argc, char** argv)
             << get_defs( GDK_TYPE_PIXBUF )
             << get_defs( GDK_TYPE_PIXBUF_ANIMATION )
             << get_defs( GDK_TYPE_PIXBUF_LOADER )
+            << get_defs( GDK_TYPE_RGBA )
             << get_defs( GDK_TYPE_SCREEN )
             << get_defs( GDK_TYPE_VISUAL )
             << get_defs( GDK_TYPE_WINDOW )
@@ -61,6 +62,7 @@ int main(int argc, char** argv)
             << get_defs( GTK_TYPE_ASPECT_FRAME )
             << get_defs( GTK_TYPE_ASSISTANT )
             << get_defs( GTK_TYPE_BIN )
+            << get_defs( GTK_TYPE_BORDER )
             << get_defs( GTK_TYPE_BOX )
             << get_defs( GTK_TYPE_BUILDER )
             << get_defs( GTK_TYPE_BUTTON )
@@ -168,7 +170,8 @@ int main(int argc, char** argv)
             << get_defs( GTK_TYPE_SPIN_BUTTON )
             << get_defs( GTK_TYPE_STATUSBAR )
             << get_defs( GTK_TYPE_STATUS_ICON )
-            << get_defs( GTK_TYPE_STYLE )
+            << get_defs( GTK_TYPE_STYLE_CONTEXT )
+            << get_defs( GTK_TYPE_STYLE_PROVIDER )
             << get_defs( GTK_TYPE_SWITCH )
             << get_defs( GTK_TYPE_TABLE )
             << get_defs( GTK_TYPE_TEAROFF_MENU_ITEM )
