@@ -1,5 +1,13 @@
 2010-12-07  Murray Cumming  <murrayc@murrayc.com>
 
+	Added signals/properties .defs for GtkStyleContext.
+
+	* tools/extra_defs_gen/generate_defs_gtk.cc: Added some new types.
+	* gtk/src/gtk_signals.defs: Added the section for GtkStyleContext so that 
+	gmmproc can actuall generate the signal and property API for Gtk::StyleContext.
+	
+2010-12-07  Murray Cumming  <murrayc@murrayc.com>
+
 	Added properties using Gdk::RGBA.
 
 	* gdk/src/color.hg:
